refactor: upgrade to Spring Boot 4.1.0/Spring AI 2.0.0, simplify embedding model loading, improve file ID mapping, and optimize MCP tool definitions.